# mikeio1d

./: .buildinfo  .gitignore  .pytest-ci.ini  .pytest.ini  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  design.html  genindex.html  getting-started.html  index.html  index.ipynb  listings.json  network.html  objects.inv  py-modindex.html  pyproject.toml  res1d.html  search.html  search.json  searchindex.js  setup.cfg  setup.py  xns11.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
_modules/: index.html
adr/: 001-pythonnet-interop.md  002-pandas-data-backend.md  003-factory-pattern-open.md  004-header-only-loading.md  005-fluent-result-network-api.md  006-derived-quantities.md  007-geodataframe-converters.md  008-nuget-build-system.md
api/: Res1D.html  Res1D.ipynb  Xns11.html  Xns11.ipynb  cross_sections.CrossSection.html  cross_sections.CrossSection.ipynb  cross_sections.CrossSectionCollection.html  cross_sections.CrossSectionCollection.ipynb  index.html  index.ipynb  open.html  open.ipynb  result_network.ResultCatchment.html  result_network.ResultCatchment.ipynb  result_network.ResultCatchments.html  result_network.ResultCatchments.ipynb  result_network.ResultGlobalData.html  result_network.ResultGlobalData.ipynb  result_network.ResultGlobalDatas.html  result_network.ResultGlobalDatas.ipynb  result_network.ResultGridPoint.html  result_network.ResultGridPoint.ipynb  result_network.ResultLocation.html  result_network.ResultLocation.ipynb  result_network.ResultLocations.html  result_network.ResultLocations.ipynb  result_network.ResultNode.html  result_network.ResultNode.ipynb  result_network.ResultNodes.html  result_network.ResultNodes.ipynb  result_network.ResultQuantity.html  result_network.ResultQuantity.ipynb  result_network.ResultQuantityCollection.html  result_network.ResultQuantityCollection.ipynb  result_network.ResultReach.html  result_network.ResultReach.ipynb  result_network.ResultReaches.html  result_network.ResultReaches.ipynb
datatalk/: 1_intro.ipynb  2_exploring_network_example.ipynb  3_geopandas_example.ipynb  4_multiindex_example.ipynb  res1d.ipynb  res1d_lts.ipynb  xns11.ipynb
docs/: .gitignore  _quarto.yml  conf.py  design.md  design.qmd  getting-started.md  index.md  index.qmd  index.rst  network.md  res1d.md  xns11.md
docs_old/: api.rst  design.rst
examples/: epanet_basic.html  epanet_basic.ipynb  index-listing.json  index.html  index.ipynb  res1d_LTS.html  res1d_LTS.ipynb  res1d_basic.html  res1d_basic.ipynb  res1d_export_to_shapefile.html  res1d_export_to_shapefile.ipynb  swmm_basic.html  swmm_basic.ipynb  xns11_basic.html  xns11_basic.ipynb
mikeio1d/: __init__.py  custom_exceptions.py  dotnet.py  format_mapper.py  mikepath.py  query.py  res1d.py  top_level.py  various.py  xns11.py
notebooks/: 100y_sections.xns11  Merging_LTS_result_files.ipynb  Res1D.ipynb  custom_derived_quantities.ipynb  epanet_res.ipynb  epanet_resx.ipynb  flat_network_sandbox.ipynb  flatten_network.ipynb  mikeio1d_dataframe_examples.ipynb  res1d.ipynb  res1d_access_static_network_data.ipynb  res1d_advanced_dataframe_examples.ipynb  res1d_basic.ipynb  res1d_converting_to_res1d.ipynb  res1d_custom_derived_quantities.ipynb  res1d_epanet_swmm_and_others.ipynb  res1d_export_to_shapefile.ipynb  res1d_extracting_to_dfs0.ipynb  res1d_large_files.ipynb  res1d_lts.ipynb  res1d_modification.ipynb  res1d_network_mapping.ipynb  swmm.ipynb  xns11.ipynb  xns11_reading_and_plotting.ipynb  xns11_writing.ipynb  xns11_writing_and_modifying.ipynb
scripts/: hatch_build_script.py  install_dependencies.py  nuget_retriever.py  run_notebooks.py  util_builder.py
tests/: __init__.py  call_mikepluspy_mikeio1d.py  conftest.py  test_core.py  test_cross_section.py  test_cross_section_collection.py  test_derived_quantities.py  test_dotnet.py  test_epanet_res_network.py  test_epanet_resx_network.py  test_experimental.py  test_geometry.py  test_geopandas.py  test_import.py  test_main.py  test_mikenet.py  test_network_autocompletion.py  test_network_formatting.py  test_network_mapper.py  test_notebooks.py  test_pandas_extension.py  test_res1d.py  test_res1d_catchments.py  test_res1d_generic.py  test_res1d_lts_chronological.py  test_res1d_lts_events.py  test_res1d_network.py  test_res1d_network_river.py  test_result_frame_aggregator.py  test_swmm_catchments.py  test_swmm_network.py  test_time_series_id.py  test_various.py  test_xns11.py
user-guide/: find_a_place_for_me.html  getting-started.html  locations.html  locations.ipynb  network.html  network.ipynb  overview.html  overview.ipynb  quantities.html  quantities.ipynb  res1d.html  res1d.ipynb  (+2 more)
(+235 files in other folders)
