[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build_script.py"

[tool.hatch.scripts]
post-install = "scripts/install_dependencies.py" # for editable installs

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[tool.hatch.build.targets.sdist.force-include]
"mikeio1d/bin" = "mikeio1d/bin"

[tool.hatch.build.targets.wheel.force-include]
"mikeio1d/bin" = "mikeio1d/bin"

[project]
name = "mikeio1d"
version = "0.8.2"
description = "A package that uses the DHI MIKE1D .NET libraries to read res1d and xns11 files."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Gediminas Kirsanskas", email = "geki@dhigroup.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "pythonnet>=3.0.0",
    "numpy",
    "pandas>=2.1.0",
    'mikecore; platform_system=="Linux"'
]

[project.optional-dependencies]
dev = [
    "hatch",
    "pytest",
    "ruff",
    "matplotlib",
    "jupyterlab",
    "geopandas",
    "folium",
    "mapclassify"
]
docs = [
    "quarto-cli",
    "quartodoc==0.7.6"
]
test = [
    "pytest",
    "matplotlib",
    "pyarrow",
    "nbformat",
    "nbconvert",
    "ipykernel"
]
all = [
    "matplotlib",
    "geopandas"
]

[project.urls]
"Homepage" = "https://github.com/DHI/mikeio1d"
"Bug Tracker" = "https://github.com/DHI/mikeio1d/issues"

[tool.ruff]
include = ["pyproject.toml", "mikeio1d/**/*.py"]
line-length = 100
lint.extend-select = ["D"]
lint.ignore = [
    "E402", # ignore for now
    "F401", # ignore for now
]
lint.pydocstyle.convention = "numpy"